[tool.poetry]
name = "grakn_dev_utils"
version = "0.1.0"
description = "functions for generating and deleting grakn databases"

license = "Apache-2.0"

authors = [
    "Jon Thompson <jjt3f2188@gmail.com>"
]

maintainers = [
    "Jon Thompson <jjt3f2188@gmail.com>"
]


readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/JonThom/grakn_dev_utils"
homepage = "https://github.com/JonThom/grakn_dev_utils"

keywords = ['grakn', 'database', 'API']

packages = [
    { include = "grakn_dev_utils/*.py" },
    { include = "grakn_dev_utils/data/*", format = "wheel" },
]

include = [
    { path = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"  # Compatible python versions must be declared here
toml = "^0.9"
# Dependencies with extras
# requests = { version = "^2.13", extras = [ "security" ] }
grakn-client = {version = "^2.0.0a7"}
# Python specific dependencies with prereleases allowed
# pathlib2 = { version = "^2.2", python = "~2.7", allow-prereleases = true }
# Git dependencies
# cleo = { git = "https://github.com/sdispater/cleo.git", branch = "master" }

# Optional dependencies (extras)
# pendulum = { version = "^1.4", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[tool.poetry.scripts]
# my-script = 'new_package:main>'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"