[tool.poetry]
name = "typedb_dev_utils"
version = "0.1.0"
description = "functions for generating and deleting TypeDB databases"

license = "Apache-2.0"

authors = [
    "Jon Thompson <jjt3f2188@gmail.com>"
]

maintainers = [
    "Jon Thompson <jjt3f2188@gmail.com>"
]


readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/JonThom/typedb-dev-utils"
homepage = "https://github.com/JonThom/typedb-dev-utils"

keywords = ['TypeDB', 'database', 'API']

packages = [
    { include = "typedb_dev_utils/*.py" },
]

include = [
    { path = "tests", format = "sdist" },
    { path = "typedb_dev_utils/data/*", format = "wheel" },
]

[tool.poetry.dependencies]
python = "^3.7"  # Compatible python versions must be declared here
# Dependencies with extras
# requests = { version = "^2.13", extras = [ "security" ] }

# setuptools = "^53.0.0"
# Python specific dependencies with prereleases allowed
# pathlib2 = { version = "^2.2", python = "~2.7", allow-prereleases = true }
# Git dependencies
# cleo = { git = "https://github.com/sdispater/cleo.git", branch = "master" }

py-dev-utils = {git = "https://github.com/JonThom/py-dev-utils.git"}
typedb-client = "^2.5.0"
# Optional dependencies (extras)


# pendulum = { version = "^1.4", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
coverage = {extras = ["toml"], version = "^5.4"}

# coverage
liccheck = "^0.6.0"
[tool.coverage.paths]
source = ["typedb_dev_utils"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.poetry.scripts]
# my-script = 'new_package:main>'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
